# sde_team

./: README.md  app.py  pyproject.toml  requirements.txt
knowledge/: user_preference.txt
output/: accounts.py_design.md
output/03-08-2026_18-19/: accounts.py  app.py  test_accounts.py
src/sde_team/: crew.py  main.py
src/sde_team/config/: agents.yaml  tasks.yaml
