[project]
name = "sde-team"
version = "0.1.0"
description = "sde-team using crewAI"
authors = [{ name = "Mathanbabu Kaliappan", email = "sakthikaliappan7797@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    # Core pinned versions (more conservative)
    "aiofiles==24.1.0",
    "aiohttp==3.10.10",
    "aiosqlite>=0.21.0,<0.22",
    "anyio==4.6.2.post1",
    "beautifulsoup4==4.12.3",
    "crewai==1.9.3",
    "fastapi==0.115.6",
    "huggingface-hub==0.25.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pydantic==2.11.9",
    "requests==2.32.3",
    "scipy==1.13.1",
    "sqlalchemy==2.0.36",
    "tiktoken>=0.8.0,<1.0.0",
    "uvicorn==0.32.1",
    # Override pinned chromadb version (this version is known to work with numpy 1.26 / pydantic 2.x)
    "chromadb>=1.1.0,<1.2",
    "gradio>=3.36.1",
    "litellm>=1.74.0,<1.75.2",
    "apscheduler>=3.11.2",
]


[project.scripts]
code_assistant = "code_assistant.main:run"
run_crew = "code_assistant.main:run"
train = "code_assistant.main:train"
replay = "code_assistant.main:replay"
test = "code_assistant.main:test"
run_with_trigger = "code_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[storage]
cache-dir = 'D:\1.Python\UV_CACHE'