[project]
name = "sde_team"
version = "0.1.0"
description = "sde_team using crewAI"
authors = [{ name = "Mathanbabu Kaliappan", email = "sakthikaliappan7797@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    # Core pinned versions (more conservative)
    "aiofiles>=22.0,<24.0",
    "aiohttp==3.10.10",
    "aiosqlite>=0.21.0,<0.22",
    "anyio==4.6.2.post1",
    "beautifulsoup4==4.12.3",
    "crewai==1.9.3",
    "fastapi==0.115.6",
    "huggingface-hub==0.25.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pydantic==2.11.9",
    "requests==2.32.3",
    "sqlalchemy==2.0.36",
    "tiktoken>=0.8.0,<1.0.0",
    "uvicorn==0.32.1",
    # Override pinned chromadb version (this version is known to work with numpy 1.26 / pydantic 2.x)
    "chromadb>=1.1.0,<1.2",
    "litellm>=1.74.0,<1.75.2",
    "apscheduler>=3.11.2",
    "gradio>4.7.0,<5.24.0",
    "scipy>=1.15.3",
]


[project.scripts]
sde_team = "sde_team.main:run"
run_crew = "sde_team.main:run"
train = "sde_team.main:train"
replay = "sde_team.main:replay"
test = "sde_team.main:test"
run_with_trigger = "sde_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[storage]
cache-dir = 'D:\1.Python\UV_CACHE'
